Use separate Intermediate directories for each  Visual C++ project in order to avoid .obj files clashing

--- a/common.props
+++ b/common.props
@@ -6,8 +6,8 @@
     <V8_LIB>$(SolutionDir)..\v8\build\Release\lib</V8_LIB>
   </PropertyGroup>
   <PropertyGroup>
-    <OutDir>$(SolutionDir)bin\</OutDir>
-    <IntDir>$(SolutionDir)bin\$(Configuration)\</IntDir>
+    <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)bin\$(Configuration)\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
