Adding x64 platform into Visual Studio projects configuration.

--- a/v8pp/v8pp.vcxproj.filters
+++ b/v8pp/v8pp.vcxproj.filters
@@ -15,5 +15,6 @@
     <ClInclude Include="call_from_v8.hpp" />
     <ClInclude Include="call_v8.hpp" />
     <ClInclude Include="proto.hpp" />
+    <ClInclude Include="forward.hpp" />
   </ItemGroup>
 </Project>
