New version for C++11 without Boost libraries.
Used variadic templates instead of set of partial template specializations generated with Boost.Preprocessor.

Removed RTTI usage for class type information, since the latter might be disabled (in node.js addon for example). Using monotonic indices for wrapped class types instead of std::type_info.

Added tests for implementation classes.

--- a/common.props
+++ b/common.props
@@ -2,10 +2,8 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <V8_INCLUDE>C:\Projects\jsx\extern\v8\include</V8_INCLUDE>
-    <V8_LIB>C:\Projects\jsx\extern\v8\lib</V8_LIB>
-    <BOOST_INCLUDE>C:\Projects\jsx\extern\boost\include</BOOST_INCLUDE>
-    <BOOST_LIB>C:\Projects\jsx\extern\boost\lib</BOOST_LIB>
+    <V8_INCLUDE>$(SolutionDir)\v8\include</V8_INCLUDE>
+    <V8_LIB>$(SolutionDir)\v8\lib</V8_LIB>
   </PropertyGroup>
   <PropertyGroup>
     <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
@@ -14,13 +12,13 @@
   <ItemDefinitionGroup>
     <ClCompile>
       <TreatWarningAsError>true</TreatWarningAsError>
-      <AdditionalIncludeDirectories>$(SolutionDir);$(BOOST_INCLUDE);$(V8_INCLUDE);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir);$(V8_INCLUDE);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4190</DisableSpecificWarnings>
       <PreprocessorDefinitions>V8_USE_UNSAFE_HANDLES;V8_DISABLE_DEPRECATIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <WarningLevel>Level3</WarningLevel>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>$(BOOST_LIB)\$(PlatformTarget);$(V8_LIB)\$(PlatformTarget)\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(V8_LIB)\$(PlatformTarget)\$(Configuration)</AdditionalLibraryDirectories>
       <AdditionalDependencies>v8.lib;ws2_32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Lib>
@@ -33,12 +31,6 @@
     </BuildMacro>
     <BuildMacro Include="V8_LIB">
       <Value>$(V8_LIB)</Value>
-    </BuildMacro>
-    <BuildMacro Include="BOOST_INCLUDE">
-      <Value>$(BOOST_INCLUDE)</Value>
-    </BuildMacro>
-    <BuildMacro Include="BOOST_LIB">
-      <Value>$(BOOST_LIB)</Value>
     </BuildMacro>
   </ItemGroup>
 </Project>
