--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -2,5 +2,19 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="test_utility.cpp" />
+    <ClCompile Include="test_call_v8.cpp" />
+    <ClCompile Include="test_throw_ex.cpp" />
+    <ClCompile Include="test_factory.cpp" />
+    <ClCompile Include="test_convert.cpp" />
+    <ClCompile Include="test_class.cpp" />
+    <ClCompile Include="test_call_from_v8.cpp" />
+    <ClCompile Include="test_context.cpp" />
+    <ClCompile Include="test_property.cpp" />
+    <ClCompile Include="test_function.cpp" />
+    <ClCompile Include="test_module.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="test.hpp" />
   </ItemGroup>
 </Project>
