--- a/v8pp/v8pp.vcxproj
+++ b/v8pp/v8pp.vcxproj
@@ -27,13 +27,13 @@
     <ClInclude Include="class.hpp" />
     <ClInclude Include="config.hpp" />
     <ClInclude Include="context.hpp" />
+    <ClInclude Include="convert.hpp" />
     <ClInclude Include="factory.hpp" />
-    <ClInclude Include="forward.hpp" />
-    <ClInclude Include="from_v8.hpp" />
+    <ClInclude Include="function.hpp" />
     <ClInclude Include="module.hpp" />
-    <ClInclude Include="proto.hpp" />
+    <ClInclude Include="property.hpp" />
     <ClInclude Include="throw_ex.hpp" />
-    <ClInclude Include="to_v8.hpp" />
+    <ClInclude Include="utility.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{2E6CFC3D-5A08-4909-8D1A-3469063D169B}</ProjectGuid>
