--- a/v8pp/v8pp.vcxproj
+++ b/v8pp/v8pp.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="factory.hpp" />
     <ClInclude Include="function.hpp" />
     <ClInclude Include="module.hpp" />
+    <ClInclude Include="object.hpp" />
     <ClInclude Include="property.hpp" />
     <ClInclude Include="throw_ex.hpp" />
     <ClInclude Include="utility.hpp" />
