--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,10 @@ compiler:
   - gcc
   - clang
 
-matrix:
-  include:
-    - env: V8_VERSION=4.10
-      env: V8_VERSION=5.1
-      env: V8_VERSION=5.2
+env: 
+  - V8_VERSION=4.10
+  - V8_VERSION=5.1
+  - V8_VERSION=5.2
 
 before_install:
   - sudo add-apt-repository ppa:pinepain/libv8-"$V8_VERSION" -y
