Simplify V8 build script for Windows
Assuming that prerequisites are alreadyn installed: Visual C++, Python, Git.

Fetch V8 and dependencies with fetch-v8.py script instead of using deport_tools
and gclient.

--- a/common.props
+++ b/common.props
@@ -19,7 +19,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(V8_LIB)\$(PlatformTarget)\$(Configuration)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>v8.lib;v8_libplatform.lib;v8_libbase.lib;ws2_32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>v8.lib;v8_libplatform.lib;v8_libbase.lib;ws2_32.lib;winmm.lib;dbghelp.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Lib>
       <AdditionalLibraryDirectories>$(BOOST_LIB)\$(PlatformTarget)\;$(V8_LIB)\$(Configuration)\$(PlatformTarget)</AdditionalLibraryDirectories>
