--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -19,4 +19,7 @@
   <ItemGroup>
     <ClInclude Include="test.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
