--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
 before_install:
   - sudo add-apt-repository ppa:pinepain/libv8-"$V8_VERSION" -y
   - sudo apt-get update -q
-  - sudo apt-get install libv8-dev -y
+  - sudo apt-get install libv8-"$V8_VERSION"-dev -y
 
 install:
   - if [ "$CXX" == "clang++" ]; then export CXXFLAGS="-stdlib=libstdc++"; fi
