Disable Visual C++ warning C4800, remove unportable #pragma warning

--- a/common.props
+++ b/common.props
@@ -9,7 +9,7 @@
     <ClCompile>
       <TreatWarningAsError>true</TreatWarningAsError>
       <AdditionalIncludeDirectories>$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4190</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4190;4800</DisableSpecificWarnings>
       <PreprocessorDefinitions>V8_USE_UNSAFE_HANDLES;V8_DISABLE_DEPRECATIONS;V8PP_ISOLATE_DATA_SLOT=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <WarningLevel>Level3</WarningLevel>
     </ClCompile>
