--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -15,6 +15,7 @@
     <ClCompile Include="test_object.cpp" />
     <ClCompile Include="test_json.cpp" />
     <ClCompile Include="test_utility.cpp" />
+    <ClCompile Include="test_ptr_traits.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test.hpp" />
