--- a/v8pp/v8pp.vcxproj
+++ b/v8pp/v8pp.vcxproj
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\v8-v120-x64.5.6.326.55\build\native\v8-v120-x64.props" Condition="Exists('..\packages\v8-v120-x64.5.6.326.55\build\native\v8-v120-x64.props')" />
+  <Import Project="..\packages\v8.redist-v120-x64.5.6.326.55\build\native\v8.redist-v120-x64.props" Condition="Exists('..\packages\v8.redist-v120-x64.5.6.326.55\build\native\v8.redist-v120-x64.props')" />
   <Import Project="..\packages\v8-v120-x64.5.4.500.8\build\native\v8-v120-x64.props" Condition="Exists('..\packages\v8-v120-x64.5.4.500.8\build\native\v8-v120-x64.props')" />
   <Import Project="..\packages\v8.symbols-v120-x64.5.4.500.8\build\native\v8.symbols-v120-x64.props" Condition="Exists('..\packages\v8.symbols-v120-x64.5.4.500.8\build\native\v8.symbols-v120-x64.props')" />
   <Import Project="..\packages\v8.redist-v120-x64.5.4.500.8\build\native\v8.redist-v120-x64.props" Condition="Exists('..\packages\v8.redist-v120-x64.5.4.500.8\build\native\v8.redist-v120-x64.props')" />
-  <Import Project="..\packages\v8-v120-x86.5.4.500.8\build\native\v8-v120-x86.props" Condition="Exists('..\packages\v8-v120-x86.5.4.500.8\build\native\v8-v120-x86.props')" />
-  <Import Project="..\packages\v8.symbols-v120-x86.5.4.500.8\build\native\v8.symbols-v120-x86.props" Condition="Exists('..\packages\v8.symbols-v120-x86.5.4.500.8\build\native\v8.symbols-v120-x86.props')" />
-  <Import Project="..\packages\v8.redist-v120-x86.5.4.500.8\build\native\v8.redist-v120-x86.props" Condition="Exists('..\packages\v8.redist-v120-x86.5.4.500.8\build\native\v8.redist-v120-x86.props')" />
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -41,6 +40,7 @@
     <ClInclude Include="object.hpp" />
     <ClInclude Include="persistent.hpp" />
     <ClInclude Include="property.hpp" />
+    <ClInclude Include="ptr_traits.hpp" />
     <ClInclude Include="throw_ex.hpp" />
     <ClInclude Include="utility.hpp" />
   </ItemGroup>
@@ -162,11 +162,10 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\v8.redist-v120-x86.5.4.500.8\build\native\v8.redist-v120-x86.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\v8.redist-v120-x86.5.4.500.8\build\native\v8.redist-v120-x86.props'))" />
-    <Error Condition="!Exists('..\packages\v8.symbols-v120-x86.5.4.500.8\build\native\v8.symbols-v120-x86.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\v8.symbols-v120-x86.5.4.500.8\build\native\v8.symbols-v120-x86.props'))" />
-    <Error Condition="!Exists('..\packages\v8-v120-x86.5.4.500.8\build\native\v8-v120-x86.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\v8-v120-x86.5.4.500.8\build\native\v8-v120-x86.props'))" />
     <Error Condition="!Exists('..\packages\v8.redist-v120-x64.5.4.500.8\build\native\v8.redist-v120-x64.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\v8.redist-v120-x64.5.4.500.8\build\native\v8.redist-v120-x64.props'))" />
     <Error Condition="!Exists('..\packages\v8.symbols-v120-x64.5.4.500.8\build\native\v8.symbols-v120-x64.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\v8.symbols-v120-x64.5.4.500.8\build\native\v8.symbols-v120-x64.props'))" />
     <Error Condition="!Exists('..\packages\v8-v120-x64.5.4.500.8\build\native\v8-v120-x64.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\v8-v120-x64.5.4.500.8\build\native\v8-v120-x64.props'))" />
+    <Error Condition="!Exists('..\packages\v8.redist-v120-x64.5.6.326.55\build\native\v8.redist-v120-x64.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\v8.redist-v120-x64.5.6.326.55\build\native\v8.redist-v120-x64.props'))" />
+    <Error Condition="!Exists('..\packages\v8-v120-x64.5.6.326.55\build\native\v8-v120-x64.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\v8-v120-x64.5.6.326.55\build\native\v8-v120-x64.props'))" />
   </Target>
 </Project>
