Build v8pp as a static library (issue #61)
Added a preprocessor configuration define `V8PP_HEADER_ONLY`, that is on by default.

Moved non-templated implementations into .cpp files, added common template instantiations there.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "BSL-1.0",
   "bugs": { "url": "https://github.com/pmed/v8pp/issues"  },
   "homepage": "https://github.com/pmed/v8pp#readme",
-  "files": ["docs", "examples", "v8pp/*.hpp", "include_dirs.js",
+  "files": ["docs", "examples", "v8pp/*.hpp", "v8pp/*.ipp", "include_dirs.js",
     "COPYING", "LICENSE_1_0.txt", "README.md"
   ]
 }
