--- a/v8pp/v8pp.vcxproj.filters
+++ b/v8pp/v8pp.vcxproj.filters
@@ -2,6 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="context.cpp" />
+    <ClCompile Include="json.cpp" />
+    <ClCompile Include="class.cpp" />
+    <ClCompile Include="throw_ex.cpp" />
+    <ClCompile Include="convert.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="context.hpp" />
@@ -23,5 +27,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="class.ipp" />
+    <None Include="json.ipp" />
+    <None Include="throw_ex.ipp" />
   </ItemGroup>
 </Project>
