--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: c++
 
 sudo: required
-dist: trusty
+dist: xenial
 
 compiler:
   - gcc
   - clang
 
 env: 
-  - V8_VERSION=4.10
-  - V8_VERSION=5.2
-  - V8_VERSION=5.4
+  - V8_VERSION=5.9
+  - V8_VERSION=6.0
+  - V8_VERSION=6.4
 
 before_install:
   - sudo add-apt-repository ppa:pinepain/libv8-"$V8_VERSION" -y
@@ -18,8 +18,8 @@ before_install:
   - sudo apt-get install libv8-"$V8_VERSION"-dev -y
 
 install:
-  - if [ "$CXX" == "clang++" ]; then export CXXFLAGS="-stdlib=libstdc++"; fi
+#  - if [ "$CXX" == "clang++" ]; then export CXXFLAGS="-stdlib=libstdc++"; fi
   
 script: make
 
-after_success: LD_LIBRARY_PATH=. ./v8pp_test -v --run-tests test/console.js test/file.js
+after_success: LD_LIBRARY_PATH=.:/opt/libv8-${V8_VERSION}/lib ./v8pp_test -v --run-tests test/console.js test/file.js
