--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: c++
 
 sudo: required
-dist: xenial
+dist: trusty #xenial
 
 compiler:
   - gcc
@@ -10,7 +10,7 @@ compiler:
 env: 
   - V8_VERSION=5.9
   - V8_VERSION=6.0
-  - V8_VERSION=6.4
+#  - V8_VERSION=6.4
 
 before_install:
   - sudo add-apt-repository ppa:pinepain/libv8-"$V8_VERSION" -y
@@ -18,7 +18,7 @@ before_install:
   - sudo apt-get install libv8-"$V8_VERSION"-dev -y
 
 install:
-#  - if [ "$CXX" == "clang++" ]; then export CXXFLAGS="-stdlib=libstdc++"; fi
+  - if [ "$CXX" == "clang++" ]; then export CXXFLAGS="-stdlib=libstdc++"; fi
   
 script: make
 
