--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ env:
 #  - V8_VERSION=6.4
 
 before_install:
-  - sudo add-apt-repository ppa:pinepain/libv8-"$V8_VERSION" -y
+  - sudo add-apt-repository ppa:pinepain/libv8-archived -y
+#  - sudo add-apt-repository ppa:pinepain/libv8 -y
   - sudo apt-get update -q
   - sudo apt-get install libv8-"$V8_VERSION"-dev -y
 
